# DataMatrix-Reader

./: .gitignore  README.md  TODO.txt
config/: config.json  config.py
cpp/: Reader.cpp  dmtxread  example.cpp  reader
java/: Testing.java
java/DataMatrixReader/src/: DM_Reader.java
python/: dm_only.py  dm_reader.py  dm_tests.py  zbar_test.py
qt_qml/: dm_reader.cpp  dm_reader.qml
qt_qml/DataMatrix-Reader/: Data-Matrix-Reader.pro  dm_reader.cpp  dm_reader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/: dm_only.py  dm_reader.py  zbar
src/tests/: dm_test.py
