[package]
name = "rust"
version = "0.1.0"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
regex = "1.1.0"
fancy-regex = "0.3.5"
zbar-rust = "0.0.14"
image = "0.23.9"